# this contain Metadata of the project (a set of data that describes and gives information about other data)


[metadata]
license = MIT
license_file = LICENSE
classifier =
    Programming Language :: Python :: 3.8 # classifier that is going to be used.
    Operating System :: OS Independent #to make sure that it works on all files 

[options] 
#fixed requirments for the projects(third party library that project cannot work with out it)
install_requires =
    ensure==1.0.2
python_requires >=3.7 # bare req of python   

[options.extras_require]
#req for dev (testing process)
testing =
    pytest>=7.1.3 # to run unit test and integration test.
    mypy>=0.971 # check typing error.
    flake8>=5.0.4 # check for any mistakes (linked in tool).
    tox>=3.25.1 # help to creat different working environment to test the application.
    black>=22.8.0 # formating the application (if it is following proper standard pyhton structure).

[options.package_data]
deepClassifier = py.typed # package and help to Disregard any error.
  
[flake8]
max-line-length = 160
exclude = __init__.py # to avoid error from mentioned files.